# koubunshoko

./: .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: 01_企画書.md  02_プロダクト要求仕様書.md  03_技術設計書.md  05_GPKI署名検証調査.md  06_e-Gov電子申請API調査.md
src/kobunshoko/: __init__.py  config.py  db.py  ingest.py  main.py  render.py  verify.py  watch.py
src/kobunshoko/extract/: __init__.py  base.py  docno.py  totatuno.py
src/kobunshoko/static/: style.css
src/kobunshoko/templates/: detail.html  index.html  ingest_result.html  layout.html  scan.html  view.html
tests/: conftest.py  test_csvenc.py  test_dta.py  test_extract.py  test_hardening.py  test_ingest_flow.py  test_pathcheck.py  test_print.py  test_reindex.py  test_scan_bulk.py  test_search.py  test_tags_memos.py  test_verify.py  test_wareki.py  test_watch.py  test_zipnames.py  zipbuild.py
tests/fixtures/: README.md
tests/fixtures/docno_set/: 209901010188888888.xml  kagami.xsl  yoshiki_29_test_001.xsl  テスト通知書_令和8年1月送付分(209901010188888888).xml  テスト通知書_令和8年1月送付分_明細(209901010188888888).csv
tests/fixtures/totatuno_set/: 209906019912345678.xml  鑑文書表示用スタイルシート.xsl
